# ChangeLog for dev-java/dbconnectionbroker
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/dbconnectionbroker/ChangeLog,v 1.2 2003/02/12 05:51:35 vapier Exp $

*dbconnectionbroker-1.0.13 (08 Jul 2002)

  08 Jul 2002; Maik Schreiber <blizzy@gentoo.org> :

  Initial import, closes bug #3759.