@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/jdbc-mssqlserver
-# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jdbc-mssqlserver/ChangeLog,v 1.1 2003/05/14 18:08:53 absinthe Exp $
+# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jdbc-mssqlserver/ChangeLog,v 1.2 2004/01/17 04:15:12 strider Exp $
+
+  17 Jan 2004; Adrian Almenar <strider@gentoo.org> jdbc-mssqlserver-2.2.0029.ebuild:
+  Removed keywords with non-java support.
 
 *jdbc-mssqlserver-2.2.0029 (14 May 2003)
 
