@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/randomguid
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/randomguid/ChangeLog,v 1.3 2003/02/12 05:54:21 vapier Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/randomguid/ChangeLog,v 1.4 2004/01/17 04:20:53 strider Exp $
+
+  17 Jan 2004; Adrian Almenar <strider@gentoo.org> randomguid-1.2.ebuild:
+  Removed keywords with non-java support.
 
 *randomguid-1.2 (08 Jul 2002)
 
