@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/dbconnectionbroker
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/dbconnectionbroker/ChangeLog,v 1.2 2003/02/12 05:51:35 vapier Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/dbconnectionbroker/ChangeLog,v 1.3 2004/01/17 04:17:20 strider Exp $
+
+  17 Jan 2004; Adrian Almenar <strider@gentoo.org> dbconnectionbroker-1.0.13.ebuild:
+  Removed keywords with non-java support.
 
 *dbconnectionbroker-1.0.13 (08 Jul 2002)
 
